Fixed overflow-x bug

--- a/src/stylesheets/Landing.scss
+++ b/src/stylesheets/Landing.scss
@@ -1,3 +1,5 @@
+/* autoprefixer grid: autoplace */
+
 $bg-color: whitesmoke;
 $shdow-gray: #d3d3d5;
 $orange: #da4d1d;
@@ -29,7 +31,7 @@ $padding-long: 3.5rem;
 .App .tiltedEffect:nth-child(4) {
   // Select the 4th span inside .block
   width: 33.33333%;
-  bottom: 40%;
+  bottom: 30%;
   left: -10%;
   z-index: 1;
 
@@ -38,16 +40,16 @@ $padding-long: 3.5rem;
 
 .App .tiltedEffect:nth-child(1) {
   // Select the 4th span inside .block
-  width: 33.33333%;
-  top: 5%;
-  right: 5%;
+  width: 100%;
+  top: 13%;
+  right: 10%;
   background: rgba(129, 198, 246, 0.2);
 }
 .App .tiltedEffect:nth-child(2) {
   // Select the 4th span inside .block
-  width: 33.33333%;
+  width: 12.33333%;
   bottom: 30%;
-  right: -10%;
+  right: 0%;
   transform: skewY(-35deg);
   transform-origin: 0;
   background: rgba(129, 198, 246, 0.4);
@@ -198,7 +200,7 @@ body {
       transition: all 0.2s ease;
     }
     .pic {
-      z-index: 100;
+      z-index: 101;
       width: 280px;
       height: 200px;
       background-image: url($img-url);
@@ -231,6 +233,7 @@ body {
     }
 
     button {
+      z-index: 23;
       position: absolute;
       right: 14px;
       bottom: 14px;
@@ -251,10 +254,8 @@ body {
 
     &:hover button {
       transform: scale(16.5);
-    }
-
-    &:hover p {
-      color: #fff;
+      -webkit-transform: scale(16.5);
+      -ms-transform: scale(16.5);
     }
 
     &:hover .pic {
